--- a/flexible-grids/css/main.css
+++ b/flexible-grids/css/main.css
@@ -25,6 +25,7 @@ h2 {
     margin: 0;
 }
 
+/* comment out 
 .grid {
     background-color: red;
     overflow: hidden;
@@ -76,7 +77,7 @@ h2 {
     padding-right: 1em;
 }
 
-
+*/
 
 
 
